[gd_scene load_steps=36 format=2]

[ext_resource path="res://menuBackGround/background/gifuti-0057.jpg" type="Texture" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://menuBackGround/background/gifuti-0046.jpg" type="Texture" id=3]
[ext_resource path="res://menuBackGround/background/gifuti-0058.jpg" type="Texture" id=4]
[ext_resource path="res://maybeBackground.jpeg" type="Texture" id=5]
[ext_resource path="res://menuBackGround/sololed/led_zeppelin_stairway_to_heaven_solo_cover_-737625196242125147.wav" type="AudioStream" id=6]
[ext_resource path="res://menuBackGround/background/gifuti-0051.jpg" type="Texture" id=9]
[ext_resource path="res://menuBackGround/background/gifuti-0048.jpg" type="Texture" id=11]
[ext_resource path="res://menuBackGround/background/gifuti-0050.jpg" type="Texture" id=13]
[ext_resource path="res://menuBackGround/background/gifuti-0059.jpg" type="Texture" id=14]
[ext_resource path="res://menuBackGround/background/gifuti-0055.jpg" type="Texture" id=15]
[ext_resource path="res://menuBackGround/background/gifuti-0047.jpg" type="Texture" id=17]
[ext_resource path="res://menuBackGround/background/gifuti-0049.jpg" type="Texture" id=21]
[ext_resource path="res://menuBackGround/background/gifuti-0053.jpg" type="Texture" id=22]
[ext_resource path="res://menuBackGround/background/gifuti-0052.jpg" type="Texture" id=23]
[ext_resource path="res://menuBackGround/background/gifuti-0054.jpg" type="Texture" id=33]
[ext_resource path="res://menuBackGround/background/gifuti-0056.jpg" type="Texture" id=34]
[ext_resource path="res://menuBackGround/background/gifuti-0021.jpg" type="Texture" id=44]
[ext_resource path="res://menuBackGround/background/gifuti-0022.jpg" type="Texture" id=49]
[ext_resource path="res://menuBackGround/background/gifuti-0024.jpg" type="Texture" id=51]
[ext_resource path="res://menuBackGround/background/gifuti-0020.jpg" type="Texture" id=54]
[ext_resource path="res://menuBackGround/background/gifuti-0030.jpg" type="Texture" id=56]
[ext_resource path="res://menuBackGround/background/gifuti-0036.jpg" type="Texture" id=59]
[ext_resource path="res://menuBackGround/background/gifuti-0023.jpg" type="Texture" id=64]
[ext_resource path="res://menuBackGround/background/gifuti-0037.jpg" type="Texture" id=67]
[ext_resource path="res://menuBackGround/background/gifuti-0038.jpg" type="Texture" id=74]
[ext_resource path="res://menuBackGround/background/gifuti-0042.jpg" type="Texture" id=76]
[ext_resource path="res://menuBackGround/background/gifuti-0041.jpg" type="Texture" id=77]
[ext_resource path="res://menuBackGround/background/gifuti-0043.jpg" type="Texture" id=78]
[ext_resource path="res://menuBackGround/background/gifuti-0044.jpg" type="Texture" id=79]
[ext_resource path="res://menuBackGround/background/gifuti-0039.jpg" type="Texture" id=80]
[ext_resource path="res://menuBackGround/background/gifuti-0040.jpg" type="Texture" id=81]
[ext_resource path="res://menuBackGround/btnExit.tres" type="Texture" id=82]
[ext_resource path="res://menuBackGround/btnPlay.tres" type="Texture" id=83]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 54 ), ExtResource( 44 ), ExtResource( 49 ), ExtResource( 64 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 59 ), ExtResource( 67 ), ExtResource( 74 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 77 ), ExtResource( 76 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 33 ), ExtResource( 15 ), ExtResource( 34 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 14 ) ],
"loop": false,
"name": "menu",
"speed": 6.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="menu" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 512.831, 303.928 )
scale = Vector2( 1.97234, 1.82625 )
frames = SubResource( 1 )
animation = "menu"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 510.735, 301.561 )
scale = Vector2( 1.41163, 1.10291 )
texture = ExtResource( 5 )

[node name="btnPlay" type="Button" parent="."]
visible = false
margin_left = 460.0
margin_top = 306.448
margin_right = 982.0
margin_bottom = 482.448
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 83 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnExit" type="Button" parent="."]
visible = false
margin_left = 460.0
margin_top = 415.0
margin_right = 982.0
margin_bottom = 591.0
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 82 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LedSolo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -14.136
[connection signal="animation_finished" from="menu" to="." method="_on_menu_animation_finished"]
[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
